# chapel

./: CMakeLists.txt  devcontainer.json  errors.patch
.devcontainer/: devcontainer.json
compiler/: Makefile
compiler/codegen/: cg-symbol.cpp
compiler/dyno/lib/: CMakeLists.txt
compiler/dyno/lib/parsing/: Parser.cpp  ParserContextImpl.h  bison-chpl-lib.cpp  chpl.ypp
compiler/dyno/lib/resolution/: Resolver.cpp  Resolver.h  default-functions.cpp  resolution-queries.cpp  scope-queries.cpp  scope-types.cpp
compiler/dyno/lib/types/: EnumType.cpp  RecordType.cpp
compiler/dyno/lib/uast/: AstList.cpp  AstNode.cpp  Begin.cpp  Builder.cpp  BuilderResult.cpp  CMakeLists.txt  Class.cpp  Cobegin.cpp  Enum.cpp  FnCall.cpp  Function.cpp  Interface.cpp  Local.cpp  Manage.cpp  Module.cpp  MultiDecl.cpp  On.cpp  Record.cpp  Select.cpp  Serial.cpp  Try.cpp  TupleDecl.cpp  Union.cpp  Variable.cpp  VisibilityClause.cpp  When.cpp  all-uast.cpp
compiler/dyno/lib/util/: chplenv.cpp
compiler/dyno/test/queries/: testUniqueString.cpp
compiler/dyno/test/resolution/: testEnums.cpp  testInteractive.cpp  testTypeConstruction.cpp
compiler/dyno/test/util/: CMakeLists.txt  testAstList.cpp
compiler/include/: misc.h
compiler/llvm/: clangUtil.cpp
compiler/main/: driver.cpp
compiler/parser/: parser.cpp
compiler/passes/: ResolveScope.cpp  convert-uast.cpp  normalize.cpp  scopeResolve.cpp
compiler/resolution/: functionResolution.cpp  resolveFunction.cpp  wrappers.cpp
compiler/util/: misc.cpp
frontend/include/chpl/framework/: Context-detail.h  ErrorBase.h  ErrorMessage.h  query-impl.h
frontend/include/chpl/parsing/: parser-error-classes-list.h
frontend/include/chpl/resolution/: scope-types.h
frontend/include/chpl/uast/: PragmaList.h
frontend/lib/framework/: Context.cpp  ErrorBase.cpp  error-classes-list.cpp
frontend/lib/parsing/: ParserContext.h  ParserContextImpl.h  bison-chpl-lib.cpp  chpl.ypp  parser-error-classes-list.cpp
frontend/lib/resolution/: scope-queries.cpp  scope-types.cpp
frontend/lib/uast/: post-parse-checks.cpp
frontend/test/: test-common.cpp
frontend/test/framework/: CMakeLists.txt  testErrorInterning.cpp
frontend/util/: lint
frontend/util/linters/: CMakeLists.txt  typePtrCompare.cpp
modules/internal/: ChapelRemoteVars.chpl
runtime/include/: chpl-gpu-impl.h  sys_basic.h
runtime/include/gpu/: chpl-gpu-gen-common.h
runtime/include/gpu/amd/: chpl-gpu-gen-includes.h
runtime/include/gpu/intel/: chpl-gpu-gen-includes.h
runtime/include/gpu/nvidia/: chpl-gpu-gen-includes.h
runtime/make/: Makefile.runtime.include
runtime/src/: chpl-gpu.c
runtime/src/gpu/amd/: gpu-amd.c
runtime/src/gpu/cpu/: gpu-cpu.c
test/variables/remote/: array.chpl  array.good
util/chplenv/: chpl_gpu.py  chpl_llvm.py  compile_link_args_utils.py
(+106 files in other folders)
